# IELTS-Speaking-Evaluator

./: .env.example  .gitignore  CONTRIBUTING.md  EVALUATION_IMPLEMENTATION.md  EVALUATION_STATUS_FINAL.md  PRONUNCIATION_IMPLEMENTATION.md  README.md  WHISPER_EVALUATION.md  diagnose_azure.py  evaluate_whisper_model.py  examples.py  examples_whisper_evaluation.py  main.py  pyproject.toml  requirements.txt  setup.py  test_evaluation.py  test_recording.py  test_whisper_evaluation.py
.github/: copilot-instructions.md
docs/: speficication.md
docs/plan/: P00_overview.md  P01_foundation_environment.md  P02_data_model_storage.md  P03_audio_capture_pipeline.md  P04_azure_audio_integration.md  P05_transcription_handling.md  P06_feature_extraction_engine.md  P07_scoring_mapping.md  P08_ui_task_flow.md  P09_feedback_reporting.md  P10_settings_admin.md  P11_accessibility_i18n.md  P12_realtime_optional.md  P13_risk_mitigation_ops.md  P14_future_extensions.md
evaluation_results/: speechocean762_summary_20250928_232326.csv
recordings/: .gitkeep
scripts/: health_check.py
src/: __init__.py  audio_recorder.py  cli.py  config_manager.py  exceptions.py  pronunciation_service.py  transcription_service.py
src/audio/: capture.py
src/config/: app_config.py
src/evaluation/: README.md  __init__.py  dataset_evaluator.py  evaluate_dataset.py  evaluate_whisper_standalone.py  examples_whisper_evaluation.py  whisper_evaluator.py  (+1 more)
tests/: test_audio_capture.py  test_feature_extraction.py  test_scoring_engine.py  test_storage_backend.py  test_transcriber.py  test_transcription_service.py
(+24 files in other folders)
