[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ielts-speaking-eval"
version = "0.1.0"
description = "Local IELTS Speaking Part 2 evaluation PoC"
authors = [{name="Phong Nguyen"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6.0",
  "sounddevice>=0.4.6",
  "numpy>=1.26.0",
  "typing-extensions>=4.9.0"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
]

[tool.ruff]
line-length = 100
select = ["E","F","I","B","UP","N"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
addopts = "-q"
